<resources>
    <string name="app_name">rande_vuz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_after_registration">AfterRegistrationActivity</string>
    <string name="title_home">Сообщения</string>
    <string name="title_dashboard">Лента</string>
    <string name="title_notifications">Профиль</string>
        <!-- Общие строки -->

        <string name="save">Сохранить</string>
        <string name="profile_image">Фото профиля</string>

        <!-- Подсказки для EditText -->
        <string name="name">Имя</string>
        <string name="age">Возраст</string>
        <string name="university">Место учебы</string>
        <string name="course">Курс</string>
        <string name="skills">Навыки</string>
        <string name="about">О себе</string>

        <string name="select_date">Выбери дату</string>
</resources>